--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,10 @@
         <link rel="alternate" type="application/atom+xml" title="Atom"
             href="{{ site.base }}/blog/blog.xml">
         <link href="http://fonts.googleapis.com/css?family=Merriweather:bold" rel="stylesheet" type="text/css">
-        <link href="http://fonts.googleapis.com/css?family=Noto Sans" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Noto Sans"
+              rel="stylesheet" type="text/css">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="container">
