adding more publications info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <body>
         <div class="container">
           <div class="header">
-            <h1 class="text-center">Irene Y. Zhang</h1>
+            <h1 class="text-center" style="font-size:5em; color:#554D7D;">Irene Y. Zhang</h1>
             <ul class="nav nav-pills nav-justified">
               {% assign shorturl = page.url | replace:'index.html','' %}
               {% for item in site.navigation %}
@@ -29,7 +29,6 @@
               {% endfor %}
             </ul>
           </div>
-
           {% comment %}Liquid is sort of terrible! I think "!= true" is the
           only way to do negation?{% endcomment %}
           {% if page.notitle != true %}
