--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <base href="http://irenezhang.net">
         <title>{{ site.name }}: {{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="{{ site.base }}/css/bootstrap.min.css" rel="stylesheet">
-        <link href="{{ site.base }}/css/group.css" rel="stylesheet">
-        <link rel="alternate" type="application/atom+xml" title="Atom"
-            href="{{ site.base }}/blog/blog.xml">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/group.css" rel="stylesheet">
+        <!-- <link rel="alternate" type="application/atom+xml" title="Atom" -->
+        <!--     href="{{ site.baseurl }}/blog/blog.xml"> -->
         <link href="http://fonts.googleapis.com/css?family=Merriweather:bold" rel="stylesheet" type="text/css">
         <link href="http://fonts.googleapis.com/css?family=Noto Sans"
               rel="stylesheet" type="text/css">
@@ -22,7 +23,7 @@
               {% assign shorturl = page.url | replace:'index.html','' %}
               {% for item in site.navigation %}
                 <li {% if item.link == shorturl %}class="active"{% endif %}>
-                  <a href="{{ site.base }}{{ item.link }}">
+                  <a href="{{ item.link }}">
                     {{ item.title }}
                   </a>
                 </li>
@@ -51,6 +52,6 @@
           
         <!-- Support retina images. -->
         <script type="text/javascript"
-            src="{{ site.base }}/js/srcset-polyfill.js"></script>
+            src="{{ site.baseurl }}/js/srcset-polyfill.js"></script>
     </body>
 </html>
