--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -26,7 +26,7 @@
 			</span>
 			{%- endif %}
 			<br />
-			<span class="btn-group">
+			<span class="links btn-group">
 				{%- if entry.fields['abstract'] %}
 				<a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" href="javascript:void(0);" onclick="$('#abstract_{{entry.fields['key']}}').slideToggle('fast');return false;">
                 <i class="fa fa-chevron-down"></i> abstract</a>
