--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,30 +2,28 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <base href="http://irenezhang.net">
-        <title>{{ site.name }}: {{ page.title }}</title>
+        <Title>{{ site.name }}: {{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/group.css" rel="stylesheet">
+        <link href="{{ site.base }}/css/bootstrap.min.css" rel="stylesheet">
+        <link href="{{ site.base }}/css/group.css" rel="stylesheet">
         <!-- <link rel="alternate" type="application/atom+xml" title="Atom" -->
         <!--     href="{{ site.baseurl }}/blog/blog.xml"> -->
-        <link href="http://fonts.googleapis.com/css?family=Merriweather:bold" rel="stylesheet" type="text/css">
-        <link href="http://fonts.googleapis.com/css?family=Noto Sans"
-              rel="stylesheet" type="text/css">
+        <link href='//fonts.googleapis.com/css?family=Playfair+Display+SC:400,400italics'
+              rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Raleway:400,500,600,700,900'
+        rel='stylesheet' type='text/css'>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="container">
           <div class="header">
-            <h1 class="text-center" style="font-size:5em; color:#70608F;">Irene Y. Zhang</h1>
+            <div class="myname clearfix">Irene <i>Y.</i> Zhang</div>
             <ul class="nav nav-pills nav-justified">
               {% assign shorturl = page.url | replace:'index.html','' %}
               {% for item in site.navigation %}
                 <li {% if item.link == shorturl %}class="active"{% endif %}>
-                  <a href="{{ item.link }}">
-                    {{ item.title }}
-                  </a>
+                  <a href="{{ site.base }}{{ item.link }}">{% if item.link == shorturl %}-{% endif %}{{ item.title }}{% if item.link == shorturl %}-{% endif %}</a>
                 </li>
               {% endfor %}
             </ul>
@@ -52,6 +50,6 @@
           
         <!-- Support retina images. -->
         <script type="text/javascript"
-            src="{{ site.baseurl }}/js/srcset-polyfill.js"></script>
+            src="{{ site.base }}/js/srcset-polyfill.js"></script>
     </body>
 </html>
