updating cv and website with OSDI 14 publications

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <link href="{{ site.base }}/css/group.css" rel="stylesheet">
         <!-- <link rel="alternate" type="application/atom+xml" title="Atom" -->
         <!--     href="{{ site.baseurl }}/blog/blog.xml"> -->
-        <link href='//fonts.googleapis.com/css?family=Quattrocento:400&text=Irene%20Y.%20Zhang'
+        <link href='//fonts.googleapis.com/css?family=Quattrocento:400'
               rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Raleway:400,500,600,700,900'
         rel='stylesheet' type='text/css'>
