Updates to add Agate and rename TAPIR

--- a/bib/publications.tmpl
+++ b/bib/publications.tmpl
@@ -29,7 +29,7 @@
 			<span class="venuetype">{{ entry|venue_type -}}</span><span class="venue">{{ entry|venue -}}</span>.
 			{%- if entry.fields['note'] %}
 			<span class="note">
-			{{ entry.fields['note']|escape }}.
+			<b>{{ entry.fields['note']|escape }}.</b>
 			</span>
 			{%- endif %}
 			<br />
