--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         <link href='//fonts.googleapis.com/css?family=Raleway:400,500,600,700,900'
         rel='stylesheet' type='text/css'>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="container">
