fixing my cse webpage

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <Title>{{ site.name }}: {{ page.title }}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width,
+				       initial-scale=1.0">
+	<link href="http://irenezhang.net/“ rel="canonical">
         <link href="{{ site.base }}/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ site.base }}/css/group.css" rel="stylesheet">
         <!-- <link rel="alternate" type="application/atom+xml" title="Atom" -->
